# Retaped-TUI

./: README.md  globals.py  login.py  main.py  pyproject.toml  structures.py  widgets.py
npyscreen/: wgselectone.py
src/retaped_tui/: __init__.py  aboutRT-tui.txt  globals.py  login.py  main.py  structures.py  widgets.py
src/retaped_tui/npyscreen/: wgcheckbox.py  wgmultiline.py  wgselectone.py  wgtitlefield.py
