[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "retaped_tui"
version = "1.0-rc10"
authors = [
  { name="Tetra Green", email="giggabyte6@gmail.com" },
]
description = "A Revolt client for the terminal"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "websockets",
    "pyaml"
]
[project.scripts]
retaped-tui = "retaped_tui:run"
[project.urls]
"Homepage" = "https://github.com/error-404-null-not-found/Retaped-tui"
"Bug Tracker" = "https://github.com/error-404-null-not-found/Retaped-tui/issues"